crates/ruff_python_parser/src/snapshots/ruff_python_parser__parser__tests__parse_bool_op_and.snap
---
source: crates/ruff_python_parser/src/parser.rs
expression: parse_ast
---
BoolOp(
    ExprBoolOp {
        range: 0..7,
        op: And,
        values: [
            Name(
                ExprName {
                    range: 0..1,
                    id: "x",
                    ctx: Load,
                },
            ),
            Name(
                ExprName {
                    range: 6..7,
                    id: "y",
                    ctx: Load,
                },
            ),
        ],
    },
)
